<resources>
    <string name="app_name">Mail Colorize</string>
    <string name="pick_color">Pick a color</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="processing">Processing…</string>
    <string name="sudo_failed">Failed to use root access</string>
    <string name="apply">Apply</string>
    <string name="root_required">Root required!</string>
    <string name="root_required_msg">Error loading databases.\nThis application requires superuser access.</string>
    <string name="reload">Reload</string>
    <string name="accept_and_continue">Accept and continue</string>
    <string name="info_text">This application requires root access!\n\nYou can use this application to change the color of your accounts in the HTC mail-app. Colors in the HTC calendar-app and HTC task-app will then also be changed.\n\nPlease close these applications before proceeding. Use on your own risk.</string>
    <string name="info_title">Note</string>
    <string name="read_db_failed">Failed to read accounts</string>
    <string name="write_db_failed">Failed to update accounts</string>
    <string name="htc_mail_required_msg">This application will only work if the htc mail app (com.htc.android.mail) is installed.</string>
    <string name="calendar_or_task_db_fail">Failed to update calendar and/or task colors. Mail colors may have been updated regardless.</string>
    <string name="info">Info</string>
    <string name="crash_title">Critical error</string>
    <string name="crash_text">Something unexpected happened and caused the app process to crash.\n\nPlease email a bug report with the information below.</string>
    <string name="restart">Restart</string>
    <string name="crash_report">Crash report</string>
    <string name="report">Report</string>
    <string name="crash_report_email_draft">Please describe exactly what you have been doing before the error occured:</string>
    <string name="send_report">Send report</string>
    <string name="root_access">Root access</string>
    <string name="mail_app">HTC Mail app</string>
    <string name="calendar_app">HTC Calendar app</string>
    <string name="task_app">HTC Task app</string>
    <string name="_continue">Continue</string>
</resources>
